fixes and query error fixed

--- a/.env
+++ b/.env
@@ -1,6 +1,12 @@
+--DB_HOST=us-cdbr-east-05.cleardb.net
+--DB_USER=b4af57c1cb2ed4
+--DB_PASS=8246e1e2
+--DB_NAME=heroku_e586d24c5ffb36c
+
+
+
 DB_HOST=localhost
 DB_USER=root
 DB_PASS=washie@dev
 DB_NAME=portalformdb
 
-mysql://:@/heroku_7536a1ef96b3e89?reconnect=true
